Fix hero section resizing on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -437,7 +437,7 @@ main {
 #hero {
   position: relative;
   width: 100%;
-  height: 100dvh;
+  min-height: 100dvh;
   display: flex;
   justify-content: center;
   align-items: center;
